Styling changes to fix profile picture layout shift.

--- a/RealTimePolls.App/wwwroot/css/site.css
+++ b/RealTimePolls.App/wwwroot/css/site.css
@@ -42,8 +42,10 @@ h1 {
 
 
 .avatar {
+    border-radius: 15px;
     width: 30px;
-    border-radius: 15px
+    height: 30px;
+    object-fit: cover; 
 }
 
 .user-flex {
